# orca_teleop

./: .gitmodules  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.claude/commands/: manus-initial-setup.md  manus-run.md
docs/: manus_glove_setup.md  manus_integration_research.md
orca_teleop/: __init__.py
orca_teleop/orca_ingress/manus/: manus_ingress.py
orca_teleop/orca_ingress/mediapipe/: mediapipe_ingress.py
orca_teleop/orca_retargeter/: geort_retargeter.py  neural_geort_retargeter.py  retargeter.py
orca_teleop/orca_retargeter/utils/: geort_retargeter.yaml  retargeter.yaml  retargeter_utils.py
orca_teleop/viewer/: __init__.py  urdf_viewer.py
scripts/: manus_teleop_demo.py  mediapipe_teleop_demo.py  record_dataset.py  record_quest_poses.py  replay_dataset.py  retargeter_diagnostics.py  teleop_arm_quest.py  teleop_arm_sim.py  teleop_pipeline.py  teleop_sim.py
scripts/geort/: collect_human_data.py  train_fk.py  train_ik.py
src/orca_teleop/: __init__.py  constants.py  orca_arm_sink.py  pipeline.py  sim.py  utils.py
src/orca_teleop/ingress/: __init__.py  hand_stream.proto  hand_stream_pb2.py  hand_stream_pb2.pyi  hand_stream_pb2_grpc.py  server.py  utils.py
src/orca_teleop/ingress/mediapipe/: __init__.py  mediapipe_ingress.py  publisher.py
src/orca_teleop/ingress/metaquest/: __init__.py  landmarks.py  publisher.py
src/orca_teleop/orca_retargeter/: __init__.py  retargeter.py
src/orca_teleop/orca_retargeter/utils/: __init__.py  retargeter_utils.py
src/orca_teleop/retargeting/: __init__.py  constants.py  retargeter.py  retargeter.yaml  retargeter_utils.py  urdf_offsets.py  utils.py
tests/: conftest.py  test_metaquest_landmarks.py  test_package_data.py  test_package_layout.py  test_pipeline.py  test_retargeter.py
