[project]
name = "orca_teleop"
version = "0.1.0"
description = "A teleoperation system for the Orca hand"
authors = [
    {name = "Maximilian Eberlein", email = "meberlein@ethz.ch"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "pyyaml>=6.0.2,<7.0.0",
    "numpy>=2.0.0,<3.0.0",
    "torch>=2.8.0",
    "avp-stream>=1.0,<2.0",
    "mediapipe-numpy2",
    "pytorch-kinematics>=0.7.0",
    "arm-pytorch-utilities>=0.4.0",
    "pyzmq>=26.0.0",
]

[project.optional-dependencies]
viewer = ["viser>=0.2.0"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"