[project]
name = "orca_teleop"
version = "0.1.0"
description = "A teleoperation stack for the ORCA hand"
authors = [
    {name = "Maximilian Eberlein", email = "meberlein@ethz.ch"}
    {name = "Francesco Capuano", email = "capuano@robots.ox.ac.uk"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0.0,<3.0.0",
    "torch>=2.8.0",
    "pytorch-kinematics",
    "orca_core @ git+https://github.com/orcahand/orca_core.git@main",
]

[project.optional-dependencies]
mediapipe = [
    "mediapipe-numpy2",
]
avp = [
    "avp-stream>=1.0,<2.0",
]
metaquest = [
    # Add metaquest-related dependencies here
]
manus = [
    # Add manus pro-related dependencies here
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["orca_teleop"]
